finished the css portion of the assignment.  Finished.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
 <body>
     <div id="root">
         <div id="header" class="header-footer">
-            <div id="logo">
-                Header Logo
+            <div>
+                <h1 id="logo">Haven Mountaineering</h1>
             </div>
             <div id="links">
-                <a href="" class="header-links">header link one</a>
-                <a href="" class="header-links">header link two</a>
-                <a href="" class="header-links">header link three</a>
+                <a href="" class="header-links">About</a>
+                <a href="" class="header-links">Products</a>
+                <a href="" class="header-links">
+                    <button class="signUpBtn">Sign In</button>
+                </a>
             </div>
         </div>
         <div id="introduction" class="header-footer">
             <div id="title">
-                <h2 style="margin: 0px;">This website is awesome</h2>
-                <p>This website has some subtext that goes here under the main title.  It's a smaller font and color is lower contrast</p>
+                <h2>Your dreams, accomplished</h2>
+                <div id="text-wrap">
+                    <p>Haven Mountaineering will set you on top of your dream peak in as little as 6 months.  We have the training, we have the equipment, and we have the expertise to take you anywhere you want to go.  So where to?</p>
+                </div>
                 <button class="signUpBtn">Sign Up</button>
             </div>
             <div id="img-container">
@@ -28,40 +32,52 @@
             </div>
         </div>
         <div id="information" class="main-content">
-            Some random information
-            <div class="subtext">
-                <div class="illustration-placeholder">
-
+            <h2>Our World Class Services</h2>
+            <div id="info-cards">
+                <div class="subtext">
+                    <div class="illustration-placeholder">
+                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic01.nyt.com%2Fimages%2F2019%2F05%2F28%2Fmultimedia%2F28xp-everest2%2F930a364d10a949edb64ec62a686b4cd6-articleLarge.jpg%3Fquality%3D75%26auto%3Dwebp%26disable%3Dupscale&f=1&nofb=1" alt="Everest-crossing">
+                    </div>
+                    <p>Everest was the hardest thing I've ever done, but I did it thanks to you!</p>
                 </div>
-                <p>This is some subtext under an illustration or image</p>
-            </div>
-            <div class="subtext">
-                <div class="illustration-placeholder">
-
+                <div class="subtext">
+                    <div class="illustration-placeholder">
+                        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fiantaylortrekking.com%2Fwp-content%2Fuploads%2F2013%2F11%2FDSC03541.jpg&f=1&nofb=1" alt="Everest-climbers">
+                    </div>
+                    <p>I couldn't afford this equipment on my own.  I was able to fulfill my dream to climb Mt. Yorucha without the cost!</p>
                 </div>
-                <p>This is some subtext under an illustration or image</p>
-            </div>
-            <div class="subtext">
-                <div class="illustration-placeholder">
-
+                <div class="subtext">
+                    <div class="illustration-placeholder">
+                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.newsapi.com.au%2Fimage%2Fv1%2Fb3d2bfb537a4071a7592a741c16bf597%3Fwidth%3D650&f=1&nofb=1" alt="Everest-climbers">
+                    </div>
+                    <p>Only 11 dead on this expedition!  By far the highest safety rating out of all the services!</p>
                 </div>
-                <p>This is some subtext under an illustration or image</p>
-            </div>
-            <div class="subtext">
-                <div class="illustration-placeholder">
-
+                <div class="subtext">
+                    <div class="illustration-placeholder">
+                        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Finapcache.boston.com%2Funiversal%2Fsite_graphics%2Fblogs%2Fbigpicture%2Feverest60%2Fbp34.jpg&f=1&nofb=1" alt="Everest-climbers">
+                    </div>
+                    <p>The extra materials are recycled on top of the mountains!  So environmentally friendly!</p>
                 </div>
-                <p>This is some subtext under an illustration or image</p>
             </div>
-        </div>
-        <div id="quote">
             
         </div>
+        <div id="quote">
+            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.loomahat.com%2Fwp-content%2Fuploads%2F2014%2F11%2F4.5-stars.png&f=1&nofb=1" alt="4.5-out-of-5-stars">
+            <p id="quote-author">4.5/5 Star Safety Rating</p>
+        </div>
         <div id="sign-up-body" class="main-content">
-
+            <div id="call-to-action-wrapper">
+                <div id="signUpTextWrapper">
+                    <h3>Convinced?</h3>
+                    <p>Begin your adventure, today!</p>
+                </div>
+                <div id="signUpBtnWrapper">
+                    <button class="signUpBtn">Sign Up</button>
+                </div>
+            </div>
         </div>
         <div id="footer" class="header-footer">
-            Copyright © The Odin Project 2021
+            <p>Copyright © Haven Mountaineering 2021</p>
         </div>
     </div>
 </body>
